force-app/main/default/objects/Customer_Order_Report__c/Customer_Order_Report__c.object-meta.xml
<CustomObject>
    <label>Customer Order Report</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Customer Order Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>