force-app/main/default/objects/Customer_Order_Report__c/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <formula>text(Customer__r.Customer_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer type</label>
    <type>Text</type>
</CustomField>