force-app/main/default/objects/Customer_Order_Report__c/fields/Guarantor_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Country_Code__c</fullName>
    <label>Guarantor Country Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>