force-app/main/default/objects/Customer_Order_Report__c/fields/Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Amount__c</fullName>
    <formula>Order__r.Total_Amount__c - Shipped_Billed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>