force-app/main/default/objects/Customer_Order_Report__c/fields/Open_Num__c.field-meta.xml
<CustomField>
    <fullName>Open_Num__c</fullName>
    <formula>Order__r.Total_Quantity__c - Shipped_Billed_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>