force-app/main/default/objects/Customer_Order_Report__c/fields/Rep_Firm__c.field-meta.xml
<CustomField>
    <fullName>Rep_Firm__c</fullName>
    <formula>Customer__r.Rep_Firm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Firm</label>
    <type>Text</type>
</CustomField>