force-app/main/default/objects/Customer_Order_Report__c/fields/Shipped_Billed_Num__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Billed_Num__c</fullName>
    <label>Shipped Billed Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>