force-app/main/default/objects/Customer_Order_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order__c</columns>
    <columns>SAP_Order_No__c</columns>
    <columns>Customer_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>